bk_ida/gccida/c0/update_life_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1093:41: error: must use 'enum' tag to refer to type 'update_life_extent'
void  update_life_info( sbitmap blocks, update_life_extent extent, int prop_flags) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1099:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_1; // [rsp+18h] [rbp-C8h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1099:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1099:19: note: to match this '('
unsigned __int64 *(short *)0x_1; // [rsp+18h] [rbp-C8h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1100:16: error: expected identifier or '('
unsigned int *(short *)0xnum__1; // [rsp+24h] [rbp-BCh] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1100:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1100:15: note: to match this '('
unsigned int *(short *)0xnum__1; // [rsp+24h] [rbp-BCh] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1103:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_0; // [rsp+40h] [rbp-A0h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1103:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1103:19: note: to match this '('
unsigned __int64 *(short *)0x_0; // [rsp+40h] [rbp-A0h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1104:16: error: expected identifier or '('
unsigned int *(short *)0xnum__0; // [rsp+4Ch] [rbp-94h] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1104:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1104:15: note: to match this '('
unsigned int *(short *)0xnum__0; // [rsp+4Ch] [rbp-94h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1109:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+78h] [rbp-68h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1109:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1109:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+78h] [rbp-68h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1113:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+94h] [rbp-4Ch] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1113:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1113:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+94h] [rbp-4Ch] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1123:1: error: must use 'enum' tag to refer to type 'update_life_extent'
update_life_extent extenta; // [rsp+D4h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1134:6: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
v3 = TV_LIFE_0; 
     ^~~~~~~~~
     TV_LIFE
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1136:6: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
v3 = TV_LIFE_UPDATE_0; 
     ^~~~~~~~~~~~~~~~
     TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1169:18: error: invalid suffix 'xnum_' on integer constant
for ( *(short *)0xnum_ = 0; *(short *)0xnum_ < size_; ++*(short *)0xnum_ ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1169:40: error: invalid suffix 'xnum_' on integer constant
for ( *(short *)0xnum_ = 0; *(short *)0xnum_ < size_; ++*(short *)0xnum_ ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/flow.c:1169:68: error: invalid suffix 'xnum_' on integer constant
for ( *(short *)0xnum_ = 0; *(short *)0xnum_ < size_; ++*(short *)0xnum_ ) 
                                                                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/update_life_info/src/obj/flow.o] Error 1
